--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
      <section>
           <!--  -->
           <div class="container px-4 mt-5">
-              <h1 class="p-3">Categories</h1>
+              <h1 id="catagory-headline" class="p-3">Categories</h1>
             <div class="row gx-5 mb-5">
               <div class="col-lg-4 col-md-6">
                 <div class="p-3 border rounded-3 d-flex justify-content-center align-items-center justify-content-around  bg-primary">
@@ -138,7 +138,7 @@
      <!-- shoes part -->
      <section class="panda-second-bg pb-5" id="Shoes">
        <div class="container px-4 ">
-         <h1 class="p-3">Shoes</h1>
+         <h1 id="shoe-heading" class="p-3">Shoes</h1>
          <div class="row row-cols-1 row-cols-md-3 row-cols-sm-2 g-4">
           <div class="col">
             <div class="card h-100">
@@ -184,7 +184,7 @@
        </div>
        <!-- bagpac part -->
        <div class="container px-4 " id="Bagpac">
-        <h1 class="p-3">Backpack</h1>
+        <h1 id="backpac-heading" class="p-3">Backpack</h1>
         <div class="row row-cols-1 row-cols-md-3 row-cols-sm-2 g-4">
          <div class="col">
            <div class="card h-100">
@@ -231,14 +231,14 @@
      </section>
      <!-- subscription part -->
      <section id="Subscribe">
-       <div class="container panda-bg-color rounded-3 p-5 mt-5 mb-5">
+       <div id="bg" class="container panda-bg-color rounded-3 p-5 mt-5 mb-5">
          <div class="row">
            <div class="col d-flex justify-content-center align-items-center">
              <div class="form">
                <h1 class="text-center">LET'S STAY IN TOUCH</h1>
                <p class="text-center">Get updates on sales specials and more</p>
-               <input class=" form-control-lg border-0" type="email" name="" placeholder="type your email" id="">
-               <button class="btn btn-warning ">send</button>
+               <input  class=" form-control-lg border-0" type="email" name="" placeholder="only type gmail" id="input-id">
+               <button id="btn-input" class="btn btn-warning " >send</button>
              </div>
            </div>
          </div>
@@ -256,5 +256,6 @@
 
     <!-- bootstrap js -->
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/style.js"></script>
 </body>
 </html>
